--- a/lib/css/snache.css
+++ b/lib/css/snache.css
@@ -16,8 +16,9 @@
   padding: 5px; 
   position: fixed; 
   z-index: 1; 
-  left: 20%; 
-  right: 50%;
+  left: 50%; 
+  transform: translateX(-50%);
+  /* right: 50%; */
   bottom: 30px;
   display: flex;
   align-items: center;
